--- a/frontend/app/views/result.scala.html
+++ b/frontend/app/views/result.scala.html
@@ -4,7 +4,8 @@
 * two arguments, a `String` for the title of the page and an `Html`
 * object to insert into the body of the page.
 *@
-@(resultText: List[String], resultDoc: List[String], resultTitle: List[String], query: String)
+@(resultText: List[String], resultDoc: List[String], resultTitle: List[String], resultCount: Map[(String, String),
+Int], query: String)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -29,95 +30,76 @@
             <li class="pull-right"><a href="" class="text-muted"><i class="fa fa-refresh"></i></a></li>
         </ol>
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="well search-result">
-                    <form class="input-group" action="/results/" method="get">
-                        <input type="query" class="form-control" placeholder="@query" name="query">
-                        <span class="input-group-btn">
-                            <button class="btn btn-info btn-lg" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                                Search
-                            </button>
-                        </span>
-                    </form>
-                </div>
-                @for(index <- 0 until resultText.size){ <div class="well search-result">
-                    <div class="row">
-                        <a href="https://pubmed.ncbi.nlm.nih.gov/@resultDoc(index)/">
-                            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
-                                <h5>@Html(resultTitle(index))</h5>
-                                <p>@Html(resultText(index))</p>
-                            </div>
-                        </a>
+            <div class="column middle">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="well search-result">
+                        <form class="input-group" action="/results/" method="get">
+                            <input type="query" class="form-control" placeholder="@query" name="query">
+                            <span class="input-group-btn">
+                                <button class="btn btn-info btn-lg" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                    Search
+                                </button>
+                            </span>
+                        </form>
                     </div>
-            </div>
-            }
+                    @for(index <- 0 until resultText.size){ <div class="well search-result">
+                        <div class="row">
+                            <a href="https://pubmed.ncbi.nlm.nih.gov/@resultDoc(index)/">
+                                <div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
+                                    <h5>@Html(resultTitle(index))</h5>
+                                    <p>@Html(resultText(index))</p>
+                                </div>
+                            </a>
+                        </div>
+                </div>
+                }
 
-            <div class="row">
-                <a href="/moreresults/">
-                    <button type="button" class="btn btn-info  btn-block">
-                        <i class="glyphicon glyphicon-refresh"></i>Load more...
-                    </button>
-                </a>
-            </div>
 
-            <!-- <div class="well search-result">
-                    <div class="row">
-                        <a href="#">
-                            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-                                <img class="img-responsive" src="https://www.bootdey.com/image/400x200/7B68EE/000000"
-                                    alt="">
-                            </div>
-                            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
-                                <h3>Result name one</h3>
-                                <p>Ut quis libero id orci semper porta ac vel ante. In nec laoreet sapien. Nunc
-                                    hendrerit ligula at massa sodales, ullamcorper rutrum orci semper.</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="well search-result">
-                    <div class="row">
-                        <a href="#">
-                            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-                                <img class="img-responsive" src="https://www.bootdey.com/image/400x200/FA8072/000000"
-                                    alt="">
-                            </div>
-                            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
-                                <h3>Blueberry Sport</h3>
-                                <p>Nulla rhoncus lacus tortor, vel tincidunt dolor eleifend et. Ut consequat elit
-                                    quam,
-                                    iaculis volutpat ipsum fermentum pulvinar. Pellentesque nec sem vel arcu ornare
-                                    faucibus.</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="well search-result">
-                    <div class="row">
-                        <a href="#">
-                            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-                                <img class="img-responsive" src="https://www.bootdey.com/image/400x200/48D1CC/000000"
-                                    alt="">
-                            </div>
-                            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
-                                <h3>Power Thirst</h3>
-                                <p>Cras nisi dolor, tristique id vehicula vitae, mollis at eros. Ut euismod sem eu
-                                    tellus vestibulum, in facilisis est feugiat. Mauris sed leo sed erat vestibulum
-                                    suscipit.</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
                 <div class="row">
-                    <button type="button" class="btn btn-info  btn-block">
-                        <i class="glyphicon glyphicon-refresh"></i>Load more...
-                    </button>
-                </div> -->
+                    <a href="/moreresults/">
+                        <button type="button" class="btn btn-info  btn-block">
+                            <i class="glyphicon glyphicon-refresh"></i>Load more...
+                        </button>
+                    </a>
+                </div>
+            </div>
         </div>
+        <div class="column side">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Jill</td>
+                        <td>Smith</td>
+                        <td>50</td>
+                    </tr>
+                    <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td>
+                        <td>94</td>
+                    </tr>
+                    <tr>
+                        <td>Adam</td>
+                        <td>Johnson</td>
+                        <td>67</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+
+
     </div>
+
     </div>
-    </div>
+
     <style type="text/css">
         a {
             text-decoration: none;
@@ -172,6 +154,22 @@
             box-shadow: none;
             border-radius: 0;
             position: relative;
+        }
+
+        .column {
+            float: left;
+            width: 30%;
+            padding: 5px;
+        }
+
+        /* Left and right column */
+        .column.side {
+            width: 25%;
+        }
+
+        /* Middle column */
+        .column.middle {
+            width: 75%;
         }
     </style>
     <script type="text/javascript">
