--- a/frontend/app/views/result.scala.html
+++ b/frontend/app/views/result.scala.html
@@ -69,29 +69,22 @@ Int], query: String)
             <table class="table">
                 <thead>
                     <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Points</th>
+                        @if(!resultCount.isEmpty){
+                        @for(item <- resultCount.head._1._1.split('$')){ <th>Capture: @item</th>
+                            }
+                            <th>Count</th>
+                            }
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Jill</td>
-                        <td>Smith</td>
-                        <td>50</td>
-                    </tr>
-                    <tr>
-                        <td>Eve</td>
-                        <td>Jackson</td>
-                        <td>94</td>
-                    </tr>
-                    <tr>
-                        <td>Adam</td>
-                        <td>Johnson</td>
-                        <td>67</td>
-                    </tr>
+                    @for(pair <- resultCount){ <tr>
+                        @for(item <- pair._1._2.split('$')){<td>@item</td>}
+                            <td>@pair._2</td>
+                            </tr>
+                            }
                 </tbody>
             </table>
+
         </div>
 
 
